# warehouse/views/auth.py
@@ -5,7 +5,10 @@ from rest_framework.response import Response
 from rest_framework.authtoken.models import Token
 from drf_yasg.utils import swagger_auto_schema
 
-from warehouse.serializers.auth import UserWarehouseLoginSerializer, WarehouseTokenSerializer
+from warehouse.serializers.auth import (
+    UserWarehouseLoginSerializer,
+    WarehouseTokenSerializer,
+)
 
 
 class AuthViewSet(viewsets.GenericViewSet):
@@ -15,7 +18,9 @@ class AuthViewSet(viewsets.GenericViewSet):
         request_body=UserWarehouseLoginSerializer,
         responses={status.HTTP_200_OK: WarehouseTokenSerializer},
     )
-    @action(methods=["POST"], detail=False, serializer_class=UserWarehouseLoginSerializer)
+    @action(
+        methods=["POST"], detail=False, serializer_class=UserWarehouseLoginSerializer
+    )
     def login(self, request, *args, **kwargs):
         serializer = self.get_serializer(
             data=request.data, context={"request": request}
